Bug 343700 - Cantor throws warnings when switching tabs
Summary: Cantor throws warnings when switching tabs
Status: RESOLVED FIXED
Alias: None
Product: cantor
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Alexander Rieder
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-02-02 15:48 UTC by Minh Ngo
Modified: 2015-02-09 19:12 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Minh Ngo 2015-02-02 15:48:37 UTC
Cantor throws warnings when creating several tabs and switching between them.

Reproducible: Always

Steps to Reproduce:
1. Create two tabs
2. Do Alt + 1, Alt + 2 several times
3. See in the debug output

Actual Results:  
Index  <number>  is not within range (0 -  2

This <number> will be increased each time.

Expected Results:  
No warnings
Comment 1 Minh Ngo 2015-02-09 19:12:35 UTC
Git commit 628297fc2404a6993c5360f9fc98ff114c6ad7e8 by Minh Ngo.
Committed on 09/02/2015 at 19:09.
Pushed by minhngo into branch 'frameworks'.

Unplugging the correct action list.

REVIEW: 122385

M  +1    -1    src/cantor.cpp

http://commits.kde.org/cantor/628297fc2404a6993c5360f9fc98ff114c6ad7e8