Unplugging the correct action list.

REVIEW: 122385
BUG: 343700